sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:23: error: not found: value i
	i=0
        ^AlgCombSort:25: error: not found: value i
		while(i+ecart<getNombreValeurs())
                      ^AlgCombSort:27: error: not found: value i
			if (plusPetit(i+ecart,i))
                                      ^AlgCombSort:29: error: not found: value i
				echange(i,i+ecart)
                                        ^AlgCombSort:33: error: not found: value i
			i=i+1
                        ^